added Dockerfile (pro dockerfile)