@@ -1,23 +1,35 @@
 FROM maven:3.9.4-eclipse-temurin-17 as build
 COPY src src
 COPY pom.xml pom.xml
-RUN mvn clean package
-FROM bellsoft/liberica-openjdk-debian:17
+RUN mvn clean install dependency:copy-dependencies -DskipTests
+
+FROM eclipse-temurin:17 as app-build
+ENV RELEASE=17
+
+WORKDIR /opt/build
+COPY --from=build target/ProjectForAtomWithAuth-0.0.1-SNAPSHOT.jar ./app.jar
+COPY --from=build target/dependency ./dep
+
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules `jdeps --ignore-missing-deps -q -recursive --multi-release ${RELEASE} --print-module-deps --class-path 'dep/*' app.jar` \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output jdk
+
+FROM debian:buster-slim
+
+ARG BUILD_PATH=/opt/build
+ENV JAVA_HOME=/opt/jdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+
 RUN adduser --system spring-boot && addgroup --system spring-boot && adduser spring-boot spring-boot
 USER spring-boot
-WORKDIR /app
-COPY --from=build target/ProjectForAtomWithAuth-0.0.1-SNAPSHOT.jar /app/myProject.jar
-ENTRYPOINT ["java", "-jar", "myProject.jar"]
 
+WORKDIR /opt/workspace
 
-#FROM bellsoft/liberica-openjdk-debian:17
-#RUN adduser --system spring-boot && addgroup --system spring-boot && adduser spring-boot spring-boot
-#USER spring-boot
-#WORKDIR /appdock
-#COPY target/ProjectForAtomWithAuth-0.0.1-SNAPSHOT.jar /app/myProject.jar
-#ENTRYPOINT ["java", "-jar", "myProject.jar"]
+COPY --from=app-build $BUILD_PATH/jdk $JAVA_HOME
+COPY --from=build target/ProjectForAtomWithAuth-0.0.1-SNAPSHOT.jar ./app.jar
 
-#FROM openjdk:17-jdk-slim-buster
-#WORKDIR /app
-#COPY target/ProjectForAtomWithAuth-0.0.1-SNAPSHOT.jar /app/myProject.jar
-#ENTRYPOINT ["java", "-jar", "myProject.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
